[gd_scene load_steps=5 format=2]

[ext_resource path="res://Login Screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://Content Screen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Login"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("LoginScreen:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -240, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "method"
tracks/1/path = NodePath("LoginScreen")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "clear_input_fields"
} ]
}

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContentScreen" parent="." instance=ExtResource( 2 )]

[node name="LoginScreen" parent="." instance=ExtResource( 1 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Login = SubResource( 1 )
[connection signal="logout" from="ContentScreen" to="." method="_on_logout"]
[connection signal="quit" from="ContentScreen" to="." method="_on_quit"]
[connection signal="login" from="LoginScreen" to="." method="_on_login"]
[connection signal="quit" from="LoginScreen" to="." method="_on_quit"]
